feat: Add put endpoint
